--- a/CSS/dashboard.css
+++ b/CSS/dashboard.css
@@ -38,7 +38,7 @@ body, html {
     justify-content: space-between;
 }
 
-.sidebar h2 {
+.sidebar h1 {
     font-size: 24px;
     margin-bottom: 30px;
     color: #fff;
@@ -79,6 +79,7 @@ body, html {
 .sidebar ul li:nth-child(4) { color: #1A1A19; }
 .sidebar ul li:nth-child(5) { color: #1A1A19; }
 .sidebar ul li:nth-child(6) { color: #1A1A19; }
+.sidebar ul li:nth-child(7) { color: #1A1A19; }
 
 .logout-btn {
     width: 80%;
