--- a/css/staff.css
+++ b/css/staff.css
@@ -36,7 +36,8 @@ h2 {
 .field-form input[type="text"],
 .field-form input[type="email"],
 .field-form input[type="date"],
-.field-form select {
+.field-form select,
+.field-form input[type="file"] {
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
