--- a/css/field.css
+++ b/css/field.css
@@ -1,5 +1,15 @@
-body {
-    background-color: #f8f9fa;
+.image-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+
 }
 #fieldsSection{
     width: 70%;
@@ -10,40 +20,25 @@ body {
     left: 20%;
     bottom: 0;
     position: absolute;
-    scroll-behavior: auto;
 
 }
+.image-popup img {
+    width: 50%;
+    max-width: 600px;
+    border: 5px solid white;
+}
 
-.table-image {
-    width: 100px;
+.image-popup .close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: white;
+    font-size: 24px;
     cursor: pointer;
-    position: relative;
 }
 
-.modal-content {
-    border-radius: 10px;
-}
-
-.modal-header {
-    background-color: #6c757d;
-    color: #fff;
-    border-bottom: 3px solid #5a6268;
-}
-
-.btn-primary {
-    background-color: #007bff;
-    border-color: #0056b3;
-}
-
-.btn-primary:hover {
-    background-color: #0056b3;
-}
-
-.btn-danger {
-    background-color: #dc3545;
-    border-color: #b02a37;
-}
-
-.btn-danger:hover {
-    background-color: #b02a37;
+.table-img {
+    width: 50px;
+    height: auto;
+    cursor: pointer;
 }
