--- a/css/staff.css
+++ b/css/staff.css
@@ -1,6 +1,7 @@
 #staffSection{
     width:auto;
-    margin-left:-70%;
+    margin-left:-170%;
+    margin-top:10%;
 }
 #staffTableContainer{
     width: 80%;
